Fixes image pathing to be relative

--- a/talk/index.html
+++ b/talk/index.html
@@ -62,7 +62,7 @@
           <p>Uses Google a lot</p>
         </section>
 
-        <section data-background="/img/bacon.png" data-background-transition="slide">
+        <section data-background="img/bacon.png" data-background-transition="slide">
           <h1>I Love Bacon<em>*</em></h1>
 
           <p class="foot-note"><em>*</em>Both the meat and the functional reactive library</p>
@@ -117,7 +117,7 @@
         </section>
 
         <section data-background="#297f79" data-background-transition="slide">
-          <img src="/img/deer.gif" alt="Fantastic deer" />
+          <img src="img/deer.gif" alt="Fantastic deer" />
         </section>
 
         <section data-background="#297f79" data-background-transition="slide">
@@ -227,7 +227,7 @@
         </section>
 
         <section data-background="#0a3c59" data-background-transition="slide">
-          <img src="/img/baby.gif" alt="Reaction of baby" />
+          <img src="img/baby.gif" alt="Reaction of baby" />
         </section>
 
         <section data-background="#0a3c59" data-background-transition="slide">
@@ -303,7 +303,7 @@
 
         <section>
           <h2>Don't fall asleep yet!</h2>
-          <img src="/img/sizzle.gif" alt="Sizzeling Bacon" />
+          <img src="img/sizzle.gif" alt="Sizzeling Bacon" />
           <p>The real fun is about to start.</p>
         </section>
 
@@ -387,7 +387,7 @@
           <h2>Now. <span class="stylish-text">Prepare</span> to be <span class="underline">amazed</span></h2>
         </section>
 
-        <section data-background="/img/skyrim.jpeg" data-background-transition="slide">
+        <section data-background="img/skyrim.jpeg" data-background-transition="slide">
         </section>
 
         <section>
@@ -445,7 +445,7 @@
             </div>
           </section>
 
-          <section data-background="/img/kevin_zoom.gif" data-background-transition="slide">
+          <section data-background="img/kevin_zoom.gif" data-background-transition="slide">
           </section>
 
           <section>
@@ -463,7 +463,7 @@ $c.combine($d, _add)
             </div>
           </section>
 
-          <section data-background="/img/kevin_yeah.jpg" data-background-transition="slide">
+          <section data-background="img/kevin_yeah.jpg" data-background-transition="slide">
           </section>
 
           <section>
@@ -472,7 +472,7 @@ $c.combine($d, _add)
 
         </section>
 
-        <section data-background="/img/francis.jpg" data-background-transition="slide">
+        <section data-background="img/francis.jpg" data-background-transition="slide">
           <h2 class="black bacon-title"><span class="stylish-text">Bacon.js</span></h2>
 
           <aside class="notes">
@@ -529,7 +529,7 @@ $c.combine($d, _add)
 
         </section>
 
-        <section data-background="/img/kevin_cool.jpg" data-background-transition="slide">
+        <section data-background="img/kevin_cool.jpg" data-background-transition="slide">
           <aside class="notes">
             <p>That is pretty cool? Possibly event cooler than this guy?</p>
           </aside>
