Updates some words and sounds

--- a/talk/index.html
+++ b/talk/index.html
@@ -306,9 +306,9 @@
         <section data-background="#a3354c" data-background-transition="slide">
           <h3>Started with <span class="stylish-text">Coal Elliot</span> and <span class="stylish-text">Paul Hydak</span> in <span class="underline">1997</span></h3>
           <p>Started with a system called
-            <span class="stylish-text">F</span>unctional
-            <span class="stylish-text">R</span>eactive
-            <span class="stylish-text">AN</span>imations, or <span class="stylish-text">FRAN</span> for short.</p>
+            <span class="bold">F</span>unctional
+            <span class="bold">R</span>eactive
+            <span class="bold">AN</span>imations, or <span class="stylish-text">FRAN</span> for short.</p>
 
           <aside class="notes">
           </aside>
@@ -359,11 +359,17 @@
         <section data-background="#a3354c" data-background-transition="slide">
           <h2>Why FRP?</h2>
           <ol>
-              <li>Functional programming in a naturally <br />stateful enviroment (and all the good that brings)</li>
-              <li>Fragmented, DRY code</li>
-              <li>Reactive data types abstracting state</li>
-              <li>GUI without side-effects</li>
-              <li>Is really good for handling UI and multiple inputs/outputs</li>
+            <li>Functional programming in a naturally <br />stateful enviroment (and all the good that brings)</li>
+            <li>Fragmented, DRY code</li>
+          </ol>
+        </section>
+
+        <section data-background="#a3354c" data-background-transition="slide">
+          <h2>Why FRP?</h2>
+          <ol>
+            <li>Reactive data types abstracting state</li>
+            <li>GUI without side-effects</li>
+            <li>Is really good for handling UI and multiple inputs/outputs</li>
           </ol>
 
           <aside class="notes">
@@ -472,7 +478,7 @@ $c.combine($d, _add)
 
         <section>
           <h3>The semantics of Bacon.js is
-            <span class="underline">true FRP</span>, as we
+            <span class="underline">classic FRP</span>, as we
             have both <span class="stylish-text">behaviours</span> and <span class="stylish-text">events</span></h3>
 
           <aside class="notes">
