Adds fallback solutions

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
   <main class="graphs">
     <div class="graph-wrapper">
       <div class="first">
-        <h2>Current heart rate: <span>120</span><small>bpm</small></h2>
+        <h2>Current heart rate: <span>0</span><small>bpm</small></h2>
         <canvas id="bpm" width="500" style="width: 100%;" height="100"></canvas>
       </div>
       <div class="second">
@@ -41,7 +41,7 @@
     </div>
 
     <div class="image-output">
-      <img class="test-image" alt="Me when I'm nervous" />
+      <img class="test-image" alt="Picture when heart rate is above given value" />
     </div>
 
     <div class="hidden helper-box">
