--- a/talk/index.html
+++ b/talk/index.html
@@ -82,7 +82,7 @@
 
         <section class="pulse" data-state="pulse" data-background="#a3354c" data-background-transition="slide">
           <h3>This is my heart rate right now:</h3>
-          <h1><span class="heartrate-initial">120</span><small>bpm</small></h1>
+          <h1><span class="heartrate-initial">N/A</span><small>bpm</small></h1>
 
           <aside class="notes">
             <p>As you probably can tell, all that Bacon isn't good for me. I must admit, me being horrendously nervous, might affect my heart rate as well.</p>
@@ -93,6 +93,12 @@
 
         <section class="pulse" data-state="pulse-activate-1">
           <h3>During this presentation you will see my heart rate at the upper left in these slides.</h3>
+          <h4>And you can follow it here: <a href="http://bit.ly/ndc-heartrate">bit.ly/ndc-heartrate</a></h4>
+
+          <aside class="notes">
+            <p>This way you can follow my every move and see when I screw up.</p>
+            <p>Hopefully all connection points will stay up.</p>
+          </aside>
         </section>
 
         <section>
